practice/lb_web_server/modules/services/web-frontend/nsg_association.tf
# resource "azurerm_network_interface_security_group_association" "nsg-association" {
#   network_interface_id      = azurerm_network_interface.nic.id
#   network_security_group_id = azurerm_network_security_group.nsg.id
# }
